Corrected the image overflow on the sticky footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,7 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
+    z-index: 4;
 }
 footer p {
     font-size: 10px;
